--- a/analytica/templates/python_editor.html
+++ b/analytica/templates/python_editor.html
@@ -193,7 +193,7 @@ max   67000.000000  189.000000    375.000000
 </div>
 
 <!-- ACE EDITOR CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.23.4/ace.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.23.4/src-min-noconflict/ace.js"></script>
 <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
 
 <script>
